# tilth

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DECISIONS.md  Makefile  READING.md  README.md  docker-compose.yml  pyproject.toml
config/: .env.example  read-policy.yaml  write-policy.yaml
docs/: architecture.md  threat-model.md
e2e/: conftest.py  test_end_to_end.py
reference/: README.md  sketch_client.py  sketch_ingest_gateway.py  sketch_mcp_server.py  sketch_query_gateway.py
scripts/: load_transcripts.py
specs/: 01-client-library.md  02-ingest-gateway.md  03-query-gateway.md  04-mcp-server.md  05-e2e.md
test-scenarios/sales-reasoning/: README.md  ground-truth.md  personas.md
test-scenarios/sales-reasoning/transcripts/deal-01/: call-01-day03.md  call-02-day12.md  call-03-day22.md  call-04-day31.md
test-scenarios/sales-reasoning/transcripts/deal-02/: call-01-day01.md  call-02-day08.md  call-03-day18.md  call-04-day28.md  call-05-day38.md
test-scenarios/sales-reasoning/transcripts/deal-03/: call-01-day05.md  call-02-day15.md  call-03-day25.md  call-04-day35.md
test-scenarios/sales-reasoning/transcripts/deal-04/: call-01-day07.md  call-02-day17.md  call-03-day30.md
test-scenarios/sales-reasoning/transcripts/deal-05/: call-01-day04.md  call-02-day14.md  call-03-day24.md  call-04-day40.md
test-scenarios/sales-reasoning/transcripts/deal-06/: call-01-day10.md  call-02-day20.md  call-03-day35.md  call-04-day50.md
test-scenarios/sales-reasoning/transcripts/deal-07/: call-01-day08.md  call-02-day22.md  call-03-day45.md
(+74 files in other folders)
